--- a/Prevu.Synoptics.V2911_Flex/Pages/P020.xaml
+++ b/Prevu.Synoptics.V2911_Flex/Pages/P020.xaml
@@ -23,7 +23,7 @@
     </Labels:Pipe>
     <Labels:Pipe Width="66" StatusComponent="032-01-MA1" PipeHeight="Medium" Canvas.Left="671" Canvas.Top="153" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:Pipe Width="68" StatusComponent="030-01-MA1" PipeHeight="Medium" Canvas.Left="805" Canvas.Top="312" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="60" StatusComponent="020-DEBALER" PipeHeight="Medium" Canvas.Left="385" Canvas.Top="520"/>
+    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="60" StatusComponent="020-DEBALER" PipeHeight="Medium" Canvas.Left="385" Canvas.Top="538"/>
     <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="218" StatusComponent="018-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="10" Canvas.Left="201" Canvas.Top="383">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
@@ -86,7 +86,7 @@
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
     <Labels:Pipe Width="64" StatusComponent="020-DEBALER" PipeHeight="Medium" Canvas.Left="439" Canvas.Top="199" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-    <Labels:Pipe Width="330" Canvas.Top="359" StatusComponent="020-DEBALER" PipeHeight="Medium" Canvas.Left="276" HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" >
+    <Labels:Pipe Width="348" Canvas.Top="368" StatusComponent="020-DEBALER" PipeHeight="Medium" Canvas.Left="267" HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" >
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -179,7 +179,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe Width="154" StatusComponent="180-01-EC1" PipeHeight="Medium" Canvas.Left="1276" Canvas.Top="480" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
+    <Labels:Pipe Width="154" StatusComponent="180-01-EC1" Canvas.Left="1276" Canvas.Top="483" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -189,7 +189,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe Width="68" StatusComponent="180-01-EC1" PipeHeight="Medium" Canvas.Left="1290" Canvas.Top="408" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Labels:Pipe Width="68" StatusComponent="180-01-EC1" Canvas.Left="1287" Canvas.Top="408" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Machines:CV_Valve HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Height="48" Width="56" Canvas.Left="195" Canvas.Top="149">
       <Machines:CV_Valve.RenderTransform>
         <TransformGroup>
@@ -202,7 +202,7 @@
     </Machines:CV_Valve>
     <Machines:V01_SB_Sfaldaballe Canvas.Left="226" Canvas.Top="488" Height="166" Width="167" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Machines:Buffer_belt HorizontalAlignment="Center" VerticalAlignment="Top" Height="70" Width="192" Canvas.Left="88" Canvas.Top="268"/>
-    <Machines:Radar HorizontalAlignment="Center" VerticalAlignment="Top" Height="36" Width="31" Canvas.Left="242" Canvas.Top="465"/>
+    <Machines:Radar HorizontalAlignment="Left" VerticalAlignment="Top" Height="36" Width="31" Canvas.Left="263" Canvas.Top="447"/>
     <Machines:Waste Height="46" Width="44" Canvas.Left="665" Canvas.Top="406" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Machines:Waste Height="46" Width="44" Canvas.Left="757" Canvas.Top="406" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Machines:CV_Valve RenderTransformOrigin="0.5,0.5" Height="48" Width="56" Canvas.Left="576" Canvas.Top="77" HorizontalAlignment="Center" VerticalAlignment="Top">
@@ -218,7 +218,7 @@
     <Machines:Buffer_belt Height="92" Width="213" Canvas.Left="474" Canvas.Top="136" HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5"/>
     <Machines:Radar Height="36" Width="30" Canvas.Left="494" Canvas.Top="148" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Machines:NT_ConveyorBelt Height="1" Width="134" Canvas.Left="846" Canvas.Top="370" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-    <Machines:V01_Material_Inlet_Outlet Canvas.Left="79" Canvas.Top="227" Height="69" Width="53" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Machines:V01_Material_Inlet_Outlet Canvas.Left="81" Canvas.Top="227" Height="69" Width="53" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Machines:V01_VRR_DryTrommel Canvas.Left="632" Canvas.Top="271" Height="122" Width="200" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Machines:NT_ConveyorBelt Height="1" Width="134" Canvas.Left="993" Canvas.Top="433" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Machines:NT_ConveyorBelt Height="1" Width="134" Canvas.Left="1137" Canvas.Top="497" HorizontalAlignment="Center" VerticalAlignment="Top"/>
@@ -228,9 +228,9 @@
     <Labels:DeviceLabel HorizontalAlignment="Center" 
             VerticalAlignment="Top" 
             ComponentName="018-01-MA1" Canvas.Left="265" Canvas.Top="213"/>
-    <Labels:DeviceLabel HorizontalAlignment="Center" 
+    <Labels:DeviceLabel HorizontalAlignment="Left" 
             VerticalAlignment="Top" 
-            ComponentName="020-41-LT1" Canvas.Left="151" Canvas.Top="430"/>
+            ComponentName="020-41-LT1" Canvas.Left="160" Canvas.Top="423"/>
     <Labels:DetailsLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="020-HYD" DetailsPageName="D020" Canvas.Left="401" Canvas.Top="598"/>
     <Labels:DeviceLabel 
             ComponentName="020-DEBALER" Canvas.Left="264" Canvas.Top="663" HorizontalAlignment="Center" VerticalAlignment="Top" />
@@ -240,7 +240,7 @@
             ComponentName="032-41-LT1" Canvas.Left="464" Canvas.Top="89" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:DeviceLabel 
             ComponentName="022-01-MA1" Canvas.Left="890" Canvas.Top="308" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-    <Labels:DetailsLabel ComponentName="018-LUB" DetailsPageName="D018" Canvas.Left="154" Canvas.Top="148" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Labels:DetailsLabel ComponentName="018-LUB" DetailsPageName="D018" Canvas.Left="152" Canvas.Top="148" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Labels:DetailsLabel ComponentName="032-LUB" DetailsPageName="D032" Canvas.Left="624" Canvas.Top="75" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:DeviceLabel 
       ComponentName="024-01-MA1" Canvas.Left="1016" Canvas.Top="462" HorizontalAlignment="Center" VerticalAlignment="Top"/>
