--- a/Prevu.Synoptics.V2911_Flex/Pages/P100.xaml
+++ b/Prevu.Synoptics.V2911_Flex/Pages/P100.xaml
@@ -21,7 +21,7 @@
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
     <Labels:Pipe Width="94" Color="Water" Canvas.Left="406" Canvas.Top="300" StatusComponent="293-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-    <Labels:Pipe Color="Vapor" Width="169" StatusComponent="110-22-CV1" Canvas.Left="270" Canvas.Top="536" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Labels:Pipe Color="Vapor" Width="169" StatusComponent="110-22-CV1" Canvas.Left="271" Canvas.Top="536" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Labels:Pipe RenderTransformOrigin="0.5,0.5" Width="30" StatusComponent="120-01-MA1" PipeHeight="Medium" Canvas.Left="1334" Canvas.Top="515" HorizontalAlignment="Center" VerticalAlignment="Top">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
@@ -74,9 +74,9 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="306" Color="Water" StatusComponent="119-01-MA1" Canvas.Left="130" Canvas.Top="658"/>
-    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="367" Color="Water" StatusComponent="113-01-MA1" Canvas.Left="72" Canvas.Top="727" Height="7"/>
-    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="284" Color="Water" StatusComponent="117-01-MA1" Canvas.Left="628" Canvas.Top="728"/>
+    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="306" Color="Water" StatusComponent="119-01-MA1" Canvas.Left="136" Canvas.Top="658"/>
+    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="367" Color="Water" StatusComponent="113-01-MA1" Canvas.Left="78" Canvas.Top="724" Height="7"/>
+    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="284" Color="Water" StatusComponent="117-01-MA1" Canvas.Left="628" Canvas.Top="725"/>
     <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="66" StatusComponent="127-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="1340" Canvas.Top="657">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
@@ -97,7 +97,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="458" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="119-01-MA1" Canvas.Left="-97" Canvas.Top="431">
+    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="458" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="119-01-MA1" Canvas.Left="-91" Canvas.Top="431">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -148,7 +148,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="572" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="113-01-MA1" Canvas.Left="-212" Canvas.Top="444">
+    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="570" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="113-01-MA1" Canvas.Left="-205" Canvas.Top="442">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -158,7 +158,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="211" StatusComponent="110-21-CV1" Canvas.Left="258" Canvas.Top="422"/>
+    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="206" StatusComponent="110-21-CV1" Canvas.Left="263" Canvas.Top="422"/>
     <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="141" StatusComponent="120-01-MA1" PipeHeight="Medium" Canvas.Left="1345" Canvas.Top="526"/>
     <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="170" StatusComponent="106-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="769" Canvas.Top="543">
       <Labels:Pipe.RenderTransform>
@@ -170,7 +170,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="68" StatusComponent="123-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="1408" Canvas.Top="182">
+    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="68" StatusComponent="123-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="1416" Canvas.Top="291">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -210,7 +210,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="294" StatusComponent="123-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="1132" Canvas.Top="295">
+    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="222" StatusComponent="123-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="1176" Canvas.Top="368">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -230,7 +230,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="167" StatusComponent="123-01-MA1" RenderTransformOrigin="0.5,0.5" Color="Air" Canvas.Left="1277" Canvas.Top="150">
+    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="168" StatusComponent="123-01-MA1" RenderTransformOrigin="0.5,0.5" Color="Air" Canvas.Left="1285" Canvas.Top="259">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -250,8 +250,8 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe Width="457" Color="Water" StatusComponent="119-01-MA1" Canvas.Left="130" Canvas.Top="204" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-    <Labels:Pipe Width="515" Color="Water" Canvas.Left="72" Canvas.Top="159" HorizontalAlignment="Center" VerticalAlignment="Top" StatusComponent="113-01-MA1"/>
+    <Labels:Pipe Width="457" Color="Water" StatusComponent="119-01-MA1" Canvas.Left="136" Canvas.Top="204" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Labels:Pipe Width="515" Color="Water" Canvas.Left="78" Canvas.Top="159" HorizontalAlignment="Left" VerticalAlignment="Center" StatusComponent="113-01-MA1"/>
     <Labels:Pipe Color="Vapor" Width="106" RenderTransformOrigin="0.5,0.5" StatusComponent="110-22-CV1" Height="6" Canvas.Left="385" Canvas.Top="586" HorizontalAlignment="Left" VerticalAlignment="Center">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
@@ -272,7 +272,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Rectangle HorizontalAlignment="Center" Height="56" Stroke="Black" VerticalAlignment="Top" Width="2" Canvas.Left="911" Canvas.Top="713" RenderTransformOrigin="0.5,0.5">
+    <Rectangle HorizontalAlignment="Center" Height="56" Stroke="Black" VerticalAlignment="Top" Width="2" Canvas.Left="911" Canvas.Top="710" RenderTransformOrigin="0.5,0.5">
       <Rectangle.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -283,7 +283,7 @@
       </Rectangle.RenderTransform>
     </Rectangle>
     <Rectangle HorizontalAlignment="Center" Height="28" Stroke="Black" VerticalAlignment="Top" Width="2" Canvas.Left="1099" Canvas.Top="138"/>
-    <Machines:WaterPump HorizontalAlignment="Left" VerticalAlignment="Top" Height="45" Width="45" RenderTransformOrigin="0.5,0.5" Color="Water" Canvas.Left="178" Canvas.Top="708">
+    <Machines:WaterPump HorizontalAlignment="Center" VerticalAlignment="Top" Height="45" Width="45" RenderTransformOrigin="0.5,0.5" Color="Water" Canvas.Left="184" Canvas.Top="705">
       <Machines:WaterPump.RenderTransform>
         <TransformGroup>
           <ScaleTransform ScaleX="-1"/>
@@ -293,7 +293,7 @@
         </TransformGroup>
       </Machines:WaterPump.RenderTransform>
     </Machines:WaterPump>
-    <Machines:WaterPump HorizontalAlignment="Left" VerticalAlignment="Center" Height="44" Width="44" RenderTransformOrigin="0.5,0.5" Color="Water" Canvas.Left="772" Canvas.Top="708">
+    <Machines:WaterPump HorizontalAlignment="Center" VerticalAlignment="Top" Height="44" Width="44" RenderTransformOrigin="0.5,0.5" Color="Water" Canvas.Left="772" Canvas.Top="705">
       <Machines:WaterPump.RenderTransform>
         <TransformGroup>
           <ScaleTransform ScaleX="-1"/>
@@ -303,7 +303,7 @@
         </TransformGroup>
       </Machines:WaterPump.RenderTransform>
     </Machines:WaterPump>
-    <Machines:WaterPump HorizontalAlignment="Center" VerticalAlignment="Top" Height="45" Width="45" RenderTransformOrigin="0.5,0.5" Color="Water" Canvas.Left="223" Canvas.Top="638">
+    <Machines:WaterPump HorizontalAlignment="Left" VerticalAlignment="Center" Height="45" Width="45" RenderTransformOrigin="0.5,0.5" Color="Water" Canvas.Left="229" Canvas.Top="638">
       <Machines:WaterPump.RenderTransform>
         <TransformGroup>
           <ScaleTransform ScaleX="-1"/>
@@ -314,8 +314,8 @@
       </Machines:WaterPump.RenderTransform>
     </Machines:WaterPump>
     <Machines:Waste HorizontalAlignment="Center" VerticalAlignment="Top" Height="46" Width="44" Canvas.Left="1351" Canvas.Top="671"/>
-    <Machines:Waste HorizontalAlignment="Left" VerticalAlignment="Center" Height="46" Width="44" Canvas.Left="1420" Canvas.Top="200"/>
-    <Machines:External HorizontalAlignment="Center" VerticalAlignment="Top" Height="62" Width="56" RenderTransformOrigin="0.5,0.5" Canvas.Left="884" Canvas.Top="754">
+    <Machines:Waste HorizontalAlignment="Center" VerticalAlignment="Top" Height="46" Width="44" Canvas.Left="1428" Canvas.Top="310"/>
+    <Machines:External HorizontalAlignment="Center" VerticalAlignment="Top" Height="62" Width="56" RenderTransformOrigin="0.5,0.5" Canvas.Left="884" Canvas.Top="751">
       <Machines:External.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -327,12 +327,12 @@
     </Machines:External>
     <Machines:NT_ConveyorBelt Height="1" Width="199" Canvas.Left="1191" Canvas.Top="619" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Blowers:VT_CMM_BlowerAirCompressor Canvas.Left="1146" Canvas.Top="130" HorizontalAlignment="Left" Height="44" VerticalAlignment="Top"/>
-    <Blowers:VT_CMM_BlowerAirCompressor Canvas.Left="1338" Canvas.Top="130" Height="45" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Blowers:VT_CMM_BlowerAirCompressor Canvas.Left="1346" Canvas.Top="239" Height="46" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Machines:V01_WCE_Centrifuge Canvas.Left="528" Canvas.Top="95" Height="183" Width="214" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-    <Machines:V01_VRC_WaterTank Canvas.Left="417" Canvas.Top="625" HorizontalAlignment="Center" VerticalAlignment="Top" Width="248" Height="142" ComponentName="110-41-LT1" TrendName="LEVEL"/>
+    <Machines:V01_VRC_WaterTank Canvas.Left="417" Canvas.Top="625" HorizontalAlignment="Center" VerticalAlignment="Top" Width="248" Height="141" ComponentName="110-41-LT1" TrendName="LEVEL"/>
     <Machines:V01_SAB_DiskSeparator Canvas.Left="1106" Canvas.Top="335" Height="183" Width="257" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Machines:V01_SCW_Screw_wHopper Canvas.Left="729" Canvas.Top="425" HorizontalAlignment="Left" VerticalAlignment="Center" Width="143" Height="134"/>
-    <Machines:V01_CV_Valve_wColor Canvas.Left="220" Canvas.Top="411" Height="28" Width="55" HorizontalAlignment="Center" VerticalAlignment="Top" Color="Water" RenderTransformOrigin="0.5,0.5">
+    <Machines:V01_CV_Valve_wColor Canvas.Left="226" Canvas.Top="411" Height="28" Width="55" HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" RenderTransformOrigin="0.5,0.5">
       <Machines:V01_CV_Valve_wColor.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -342,7 +342,7 @@
         </TransformGroup>
       </Machines:V01_CV_Valve_wColor.RenderTransform>
     </Machines:V01_CV_Valve_wColor>
-    <Machines:V01_CV_Valve_wColor Canvas.Left="218" Canvas.Top="525" Height="29" Width="56" Color="Steam" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center">
+    <Machines:V01_CV_Valve_wColor Canvas.Left="224" Canvas.Top="525" Height="29" Width="56" Color="Steam" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center">
       <Machines:V01_CV_Valve_wColor.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -361,7 +361,7 @@
     <Labels:JumpLabel HorizontalAlignment="Left" 
             VerticalAlignment="Center" 
             JumpFromLabel="120-01-MA1" 
-            JumpToLabel="126-01-MA1" Canvas.Left="1418" Canvas.Top="496"/>
+            JumpToLabel="126-01-MA1" Canvas.Left="1414" Canvas.Top="496"/>
     <Labels:JumpLabel 
       JumpFromLabel="110-41-LT1" 
       JumpToLabel="293-01-MA1" Canvas.Left="336" Canvas.Top="267" HorizontalAlignment="Center" VerticalAlignment="Center"/>
@@ -369,23 +369,23 @@
             VerticalAlignment="Center" 
             ComponentName="104-01-MA1" Canvas.Left="566" Canvas.Top="440"/>
     <Labels:DeviceLabel HorizontalAlignment="Left" 
-            VerticalAlignment="Center" 
-            ComponentName="123-01-MA1" Canvas.Left="1318" Canvas.Top="72"/>
+            VerticalAlignment="Top" 
+            ComponentName="123-01-MA1" Canvas.Left="1324" Canvas.Top="177"/>
     <Labels:DeviceLabel HorizontalAlignment="Center" 
-            VerticalAlignment="Center" 
-            ComponentName="113-01-MA1" Canvas.Left="156" Canvas.Top="760"/>
-    <Labels:DeviceLabel HorizontalAlignment="Left" 
-            VerticalAlignment="Center" 
-            ComponentName="117-01-MA1" Canvas.Left="750" Canvas.Top="760"/>
-    <Labels:DeviceLabel HorizontalAlignment="Left" 
-            VerticalAlignment="Center" 
-            ComponentName="117-71-ECS1" Canvas.Left="924" Canvas.Top="705"/>
+            VerticalAlignment="Top" 
+            ComponentName="113-01-MA1" Canvas.Left="162" Canvas.Top="757"/>
+    <Labels:DeviceLabel HorizontalAlignment="Center" 
+            VerticalAlignment="Top" 
+            ComponentName="117-01-MA1" Canvas.Left="750" Canvas.Top="757"/>
+    <Labels:DeviceLabel HorizontalAlignment="Center" 
+            VerticalAlignment="Top" 
+            ComponentName="117-71-ECS1" Canvas.Left="924" Canvas.Top="702"/>
     <Labels:DeviceLabel HorizontalAlignment="Center" 
             VerticalAlignment="Top" 
             ComponentName="100-01-MA1" Canvas.Left="750" Canvas.Top="107"/>
-    <Labels:DeviceLabel HorizontalAlignment="Center" 
-            VerticalAlignment="Top" 
-            ComponentName="119-01-MA1" Canvas.Left="200" Canvas.Top="581"/>
+    <Labels:DeviceLabel HorizontalAlignment="Left" 
+            VerticalAlignment="Center" 
+            ComponentName="119-01-MA1" Canvas.Left="206" Canvas.Top="581"/>
     <Labels:DeviceLabel HorizontalAlignment="Left" 
             VerticalAlignment="Top" 
             ComponentName="106-01-MA1" Canvas.Left="814" Canvas.Top="371"/>
@@ -431,9 +431,9 @@
       </Labels:DeviceLabel.RenderTransform>
     </Labels:DeviceLabel>
     <Labels:DeviceLabel 
-      ComponentName="110-22-CV1" Canvas.Left="200" Canvas.Top="465" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+      ComponentName="110-22-CV1" Canvas.Left="206" Canvas.Top="465" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Labels:DeviceLabel 
-      ComponentName="110-21-CV1" Canvas.Left="200" Canvas.Top="351" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+      ComponentName="110-21-CV1" Canvas.Left="206" Canvas.Top="351" HorizontalAlignment="Left" VerticalAlignment="Center"/>
 
   </Canvas>
 </UserControl>
