--- a/Prevu.Synoptics.V2911_Flex/Pages/P880.xaml
+++ b/Prevu.Synoptics.V2911_Flex/Pages/P880.xaml
@@ -27,7 +27,7 @@
 
     <Machines:VRC_WaterCollectingTank Height="69" Width="23" Canvas.Left="623" Canvas.Top="114" HorizontalAlignment="Center" VerticalAlignment="Top"/>
 
-    <Labels:Pipe Width="142" RenderTransformOrigin="0.5,0.5" StatusComponent="880-01-ECS11" Canvas.Left="518" Canvas.Top="501" HorizontalAlignment="Center" VerticalAlignment="Top" InverseStatus="True" >
+    <Labels:Pipe Width="142" RenderTransformOrigin="0.5,0.5" StatusComponent="880-01-ECS11" Canvas.Left="518" Canvas.Top="501" HorizontalAlignment="Center" VerticalAlignment="Top" >
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -38,7 +38,7 @@
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
 
-    <Labels:Pipe Width="142" RenderTransformOrigin="0.5,0.5" StatusComponent="880-01-ECS10" Canvas.Left="509" Canvas.Top="501" HorizontalAlignment="Center" VerticalAlignment="Top" InverseStatus="True" >
+    <Labels:Pipe Width="142" RenderTransformOrigin="0.5,0.5" StatusComponent="880-01-ECS10" Canvas.Left="509" Canvas.Top="501" HorizontalAlignment="Center" VerticalAlignment="Top" >
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -48,7 +48,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe Width="142" RenderTransformOrigin="0.5,0.5" StatusComponent="880-01-ECS12" Canvas.Left="527" Canvas.Top="501" HorizontalAlignment="Center" VerticalAlignment="Top" InverseStatus="True" >
+    <Labels:Pipe Width="142" RenderTransformOrigin="0.5,0.5" StatusComponent="880-01-ECS12" Canvas.Left="527" Canvas.Top="501" HorizontalAlignment="Center" VerticalAlignment="Top" >
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -149,7 +149,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe Width="84" StatusComponent="880-01-ECS10" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="586" Canvas.Top="464" HorizontalAlignment="Center" VerticalAlignment="Top">
+    <Labels:Pipe Width="84" StatusComponent="880-01-ECS10" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="587" Canvas.Top="464" HorizontalAlignment="Left" VerticalAlignment="Center">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -199,7 +199,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe Width="158" StatusComponent="880-01-ECS13" RenderTransformOrigin="0.5,0.5" Canvas.Left="656" Canvas.Top="479" HorizontalAlignment="Center" VerticalAlignment="Top" InverseStatus="True">
+    <Labels:Pipe Width="148" StatusComponent="880-01-ECS13" RenderTransformOrigin="0.5,0.5" Canvas.Left="661" Canvas.Top="474" HorizontalAlignment="Center" VerticalAlignment="Top">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -209,8 +209,8 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe Width="213" StatusComponent="880-01-ECS13" RenderTransformOrigin="0.5,0.5" Canvas.Left="733" Canvas.Top="556" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="" VisibilitySignal="" InverseStatus="True"/>
-    <Labels:Pipe Width="60" StatusComponent="880-01-ECS13" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="746" Canvas.Top="444" HorizontalAlignment="Center" VerticalAlignment="Top">
+    <Labels:Pipe Width="213" StatusComponent="880-01-ECS13" RenderTransformOrigin="0.5,0.5" Canvas.Left="733" Canvas.Top="546" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="" VisibilitySignal=""/>
+    <Labels:Pipe Width="60" StatusComponent="880-01-ECS13" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="745" Canvas.Top="444" HorizontalAlignment="Left" VerticalAlignment="Center">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -220,7 +220,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe Width="193" StatusComponent="880-01-ECS13" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="774" Canvas.Top="472" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Labels:Pipe Width="197" StatusComponent="880-01-ECS13" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="773" Canvas.Top="472" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Labels:Pipe Width="359" RenderTransformOrigin="0.5,0.5" StatusComponent="887-01-MA1" Canvas.Left="632" Canvas.Top="82" HorizontalAlignment="Center" VerticalAlignment="Top">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
@@ -241,7 +241,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe Width="24" RenderTransformOrigin="0.5,0.5" StatusComponent="880-01-ECS10" Canvas.Left="606" Canvas.Top="504" Color="ByProduct" HorizontalAlignment="Center" VerticalAlignment="Top" >
+    <Labels:Pipe Width="24" RenderTransformOrigin="0.5,0.5" StatusComponent="880-01-ECS10" Canvas.Left="607" Canvas.Top="504" Color="ByProduct" HorizontalAlignment="Left" VerticalAlignment="Center" >
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -251,7 +251,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe Width="318" RenderTransformOrigin="0.5,0.5" StatusComponent="888-01-MA1" PipeHeight="Medium" Height="26" Canvas.Left="840" Canvas.Top="708" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="989-21-CV1" VisibilitySignal="LS1" >
+    <Labels:Pipe Width="318" RenderTransformOrigin="0.5,0.5" StatusComponent="888-01-MA1" PipeHeight="Medium" Height="26" Canvas.Left="834" Canvas.Top="708" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="989-21-CV1" VisibilitySignal="LS1" >
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -261,7 +261,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe Width="288" RenderTransformOrigin="0.5,0.5" StatusComponent="888-01-MA1" PipeHeight="Medium" Height="26" Canvas.Left="870" Canvas.Top="748" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="989-21-CV1" VisibilitySignal="LS2" >
+    <Labels:Pipe Width="288" RenderTransformOrigin="0.5,0.5" StatusComponent="888-01-MA1" PipeHeight="Medium" Height="26" Canvas.Left="864" Canvas.Top="750" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="989-21-CV1" VisibilitySignal="LS2" >
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -271,14 +271,14 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe Width="173" StatusComponent="880-01-ECS13" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="1016" Canvas.Top="472" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Labels:Pipe Width="173" StatusComponent="880-01-ECS13" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="1019" Canvas.Top="472" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Machines:V01_FKS_FlakesSorter_DoubleCH Canvas.Left="530" Canvas.Top="181" Height="260" Width="306" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Blowers:VT_CMM_BlowerAirCompressor Width="50" Canvas.Left="465" Canvas.Top="695" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Machines:VRC_WaterCollectingTank Canvas.Left="573" Canvas.Top="566" Width="32" Height="16" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Machines:V01_VS_Airlock Canvas.Left="560" Canvas.Top="574" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Machines:V01_ScarpaTrasporto Canvas.Left="551" Canvas.Top="682" Height="50" Width="84" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Machines:V01_BBF_SingleBag Canvas.Left="1280" Canvas.Top="230" Height="127" Width="110" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-    <Machines:V01_SCW_Flex_Verticale_DX Canvas.Left="922" Canvas.Top="298" Height="320" Width="94" HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5">
+    <Machines:V01_SCW_Flex_Verticale_DX Canvas.Left="922" Canvas.Top="288" Height="320" Width="94" HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5">
       <Machines:V01_SCW_Flex_Verticale_DX.RenderTransform>
         <TransformGroup>
           <ScaleTransform ScaleX="-1"/>
@@ -288,7 +288,7 @@
         </TransformGroup>
       </Machines:V01_SCW_Flex_Verticale_DX.RenderTransform>
     </Machines:V01_SCW_Flex_Verticale_DX>
-    <Machines:V01_DV_Diverter Canvas.Left="779" Canvas.Top="704" Height="72" Width="100" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
+    <Machines:V01_DV_Diverter Canvas.Left="779" Canvas.Top="705" Height="72" Width="100" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
       <Machines:V01_DV_Diverter.RenderTransform>
         <TransformGroup>
           <ScaleTransform ScaleY="1"/>
@@ -309,7 +309,7 @@
         </TransformGroup>
       </Machines:V01_SCW_Flex_Verticale_DX.RenderTransform>
     </Machines:V01_SCW_Flex_Verticale_DX>
-    <Rectangle Height="2" Stroke="Black" Width="114" RenderTransformOrigin="0.5,0.5" Canvas.Left="1121" Canvas.Top="760" HorizontalAlignment="Center" VerticalAlignment="Top">
+    <Rectangle Height="2" Stroke="Black" Width="114" RenderTransformOrigin="0.5,0.5" Canvas.Left="1115" Canvas.Top="760" HorizontalAlignment="Left" VerticalAlignment="Center">
       <Rectangle.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -319,7 +319,7 @@
         </TransformGroup>
       </Rectangle.RenderTransform>
     </Rectangle>
-    <Machines:External Height="58" Width="60" RenderTransformOrigin="0.5,0.5" Canvas.Left="1090" Canvas.Top="589" HorizontalAlignment="Center" VerticalAlignment="Top">
+    <Machines:External Height="58" Width="60" RenderTransformOrigin="0.5,0.5" Canvas.Left="1084" Canvas.Top="592" HorizontalAlignment="Center" VerticalAlignment="Top">
       <Machines:External.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -333,7 +333,7 @@
             JumpFromLabel="880-01-EC1" Canvas.Left="196" Canvas.Top="68" HorizontalAlignment="Center" VerticalAlignment="Top" JumpToLabel="868-01-MA1" />
     <Labels:DetailsLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="880-VIEW" DetailsPageName="D880" HideComponentName="True" Canvas.Left="670" Canvas.Top="216"/>
     <Labels:DetailsLabel ComponentName="883-BAG" DetailsPageName="D883_2" HideComponentName="True" Canvas.Left="1372" Canvas.Top="355" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-    <Labels:DetailsLabel ComponentName="887-HOPPER" DetailsPageName="D887" HideComponentName="True" Canvas.Left="1078" Canvas.Top="583" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Labels:DetailsLabel ComponentName="887-HOPPER" DetailsPageName="D887" HideComponentName="True" Canvas.Left="1078" Canvas.Top="573" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:DetailsLabel ComponentName="883-HOPPER" DetailsPageName="D883" HideComponentName="True" Canvas.Left="1321" Canvas.Top="499" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:DetailsLabel ComponentName="885-HOPPER" DetailsPageName="D885" HideComponentName="True" Canvas.Left="377" Canvas.Top="554" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:DeviceLabel HorizontalAlignment="Center" 
@@ -345,29 +345,29 @@
     <Labels:DeviceLabel HorizontalAlignment="Center" 
             VerticalAlignment="Top" 
             ComponentName="880-61-LEV" Canvas.Left="572" Canvas.Top="216"/>
-    <Labels:DeviceLabel HorizontalAlignment="Center" 
-            VerticalAlignment="Top" 
-            ComponentName="880-01-EC1" Canvas.Left="634" Canvas.Top="392"/>
+    <Labels:DeviceLabel HorizontalAlignment="Left" 
+            VerticalAlignment="Center" 
+            ComponentName="880-01-EC1" Canvas.Left="637" Canvas.Top="392"/>
     <Labels:DeviceLabel 
             ComponentName="888-01-MA1" Canvas.Left="445" Canvas.Top="639" HorizontalAlignment="Center" VerticalAlignment="Top" />
     <Labels:DeviceLabel 
-            ComponentName="886-01-MA1" Canvas.Left="627" Canvas.Top="582" HorizontalAlignment="Center" VerticalAlignment="Top" />
+            ComponentName="886-01-MA1" Canvas.Left="636" Canvas.Top="581" HorizontalAlignment="Left" VerticalAlignment="Center" />
     <Labels:DeviceLabel 
-      ComponentName="880-01-ECS10" Canvas.Left="468" Canvas.Top="286" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+      ComponentName="880-01-ECS10" Canvas.Left="466" Canvas.Top="286" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Labels:DeviceLabel 
       ComponentName="880-01-ECS13" Canvas.Left="782" Canvas.Top="325" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:DeviceLabel 
-      ComponentName="880-01-ECS11" Canvas.Left="468" Canvas.Top="349" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+      ComponentName="880-01-ECS11" Canvas.Left="466" Canvas.Top="349" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Labels:DeviceLabel 
-      ComponentName="880-01-ECS12" Canvas.Left="468" Canvas.Top="412" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+      ComponentName="880-01-ECS12" Canvas.Left="466" Canvas.Top="412" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Labels:DeviceLabel 
-      ComponentName="989-71-ECS2" Canvas.Left="1165" Canvas.Top="743" HorizontalAlignment="Center" VerticalAlignment="Top" />
+      ComponentName="989-71-ECS2" Canvas.Left="1180" Canvas.Top="718" HorizontalAlignment="Center" VerticalAlignment="Top" />
     <Labels:DeviceLabel 
-      ComponentName="989-71-ECS1" Canvas.Left="1165" Canvas.Top="687" HorizontalAlignment="Center" VerticalAlignment="Top" />
+      ComponentName="989-71-ECS1" Canvas.Left="1180" Canvas.Top="634" HorizontalAlignment="Center" VerticalAlignment="Top" />
     <Labels:DeviceLabel 
       ComponentName="989-21-CV1" Canvas.Left="782" Canvas.Top="649" HorizontalAlignment="Center" VerticalAlignment="Top" />
     <Labels:DeviceLabel 
-      ComponentName="887-61-LEV" Canvas.Left="983" Canvas.Top="583" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+      ComponentName="887-61-LEV" Canvas.Left="983" Canvas.Top="573" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:DeviceLabel 
       ComponentName="883-01-MA1" Canvas.Left="1125" Canvas.Top="193" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:DeviceLabel 
@@ -400,6 +400,12 @@
     </Rectangle>
     <Labels:DeviceLabel 
       ComponentName="880-61-LS4" Canvas.Left="750" Canvas.Top="110" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <TextBlock TextWrapping="Wrap" 
+      TextAlignment="Right" 
+      FontSize="16" Foreground="White" Text="{lex:Loc Extruder#- 1}" Canvas.Left="1023" Canvas.Top="690" Opacity="0.7" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <TextBlock TextWrapping="Wrap" 
+      TextAlignment="Right" 
+      FontSize="16" Foreground="White" Text="{lex:Loc Big Bag#- 2}" Canvas.Left="1024" Canvas.Top="735" Opacity="0.7" HorizontalAlignment="Left" VerticalAlignment="Center"/>
 
   </Canvas>
 </UserControl>
