--- a/Prevu.Synoptics.V3085_Anviplas/P570.xaml
+++ b/Prevu.Synoptics.V3085_Anviplas/P570.xaml
@@ -9,7 +9,7 @@
              x:Class="Prevu.Synoptics.P570" mc:Ignorable="d"
              Height="850" Width="1550" d:Background="{DynamicResource MaterialDesignPaper}">
   <Canvas >
-    <Labels:Pipe Width="252" StatusComponent="570-71-ECS1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="435" Canvas.Top="355" HorizontalAlignment="Center" VerticalAlignment="Top">
+    <Labels:Pipe Width="252" StatusComponent="570-71-ECS1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="403" Canvas.Top="390" HorizontalAlignment="Left" VerticalAlignment="Center">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -19,8 +19,8 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe Width="272" StatusComponent="580-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="1050" Canvas.Top="649" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-    <Labels:Pipe Width="130" StatusComponent="570-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="738" Canvas.Top="588" HorizontalAlignment="Center" VerticalAlignment="Top">
+    <Labels:Pipe Width="272" StatusComponent="580-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="1050" Canvas.Top="687" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Labels:Pipe Width="130" StatusComponent="570-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="738" Canvas.Top="626" HorizontalAlignment="Center" VerticalAlignment="Top">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -30,7 +30,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="352" StatusComponent="544-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="369" Canvas.Top="305">
+    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="352" StatusComponent="544-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="385" Canvas.Top="298">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -40,7 +40,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="298" StatusComponent="564-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="380" Canvas.Top="331">
+    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="298" StatusComponent="564-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="396" Canvas.Top="324">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -50,11 +50,11 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="187" StatusComponent="564-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="346" Canvas.Top="185"/>
-    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="302" StatusComponent="544-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="248" Canvas.Top="132"/>
-    <Labels:Pipe Width="188" StatusComponent="570-21-CV1" Color="Air" Height="6" Canvas.Left="573" Canvas.Top="309" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="92" StatusComponent="570-21-CV1" Color="Air" Height="6" Canvas.Left="424" Canvas.Top="309"/>
-    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="77" StatusComponent="570-21-CV1" Color="Air" Height="6" RenderTransformOrigin="0.5,0.5" Canvas.Left="450" Canvas.Top="346">
+    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="187" StatusComponent="564-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="362" Canvas.Top="178"/>
+    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="302" StatusComponent="544-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="264" Canvas.Top="124"/>
+    <Labels:Pipe Width="188" StatusComponent="570-21-CV1" Color="Air" Height="6" Canvas.Left="573" Canvas.Top="357" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="92" StatusComponent="570-21-CV1" Color="Air" Height="6" Canvas.Left="424" Canvas.Top="357"/>
+    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="77" StatusComponent="570-21-CV1" Color="Air" Height="6" RenderTransformOrigin="0.5,0.5" Canvas.Left="450" Canvas.Top="394">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -64,7 +64,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="77" StatusComponent="570-21-CV1" Color="Air" Height="6" RenderTransformOrigin="0.5,0.5" Canvas.Left="722" Canvas.Top="345">
+    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="77" StatusComponent="570-21-CV1" Color="Air" Height="6" RenderTransformOrigin="0.5,0.5" Canvas.Left="722" Canvas.Top="393">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -74,8 +74,8 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Machines:V01_NT_NastroBuffer Canvas.Left="460" Canvas.Top="382" Height="166" Width="378" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-    <Rectangle HorizontalAlignment="Left" Height="4" Stroke="Black" VerticalAlignment="Center" Width="90" RenderTransformOrigin="0.5,0.5" Canvas.Left="1275" Canvas.Top="654" StrokeThickness="2">
+    <Machines:V01_NT_NastroBuffer Canvas.Left="460" Canvas.Top="430" Height="166" Width="378" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Rectangle HorizontalAlignment="Center" Height="4" Stroke="Black" VerticalAlignment="Top" Width="90" RenderTransformOrigin="0.5,0.5" Canvas.Left="1275" Canvas.Top="692" StrokeThickness="2">
       <Rectangle.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -85,10 +85,10 @@
         </TransformGroup>
       </Rectangle.RenderTransform>
     </Rectangle>
-    <Machines:External HorizontalAlignment="Left" VerticalAlignment="Center" Height="58" Width="60" RenderTransformOrigin="0.5,0.5" Canvas.Left="1290" Canvas.Top="682"/>
-    <Machines:Radar HorizontalAlignment="Center" VerticalAlignment="Top" Height="45" Width="39" Canvas.Left="752" Canvas.Top="360"/>
-    <Machines:Radar HorizontalAlignment="Center" VerticalAlignment="Top" Height="45" Width="39" Canvas.Left="480" Canvas.Top="360"/>
-    <Machines:CV_Valve_001 HorizontalAlignment="Center" VerticalAlignment="Top" Color="Air" Height="52" Width="51" RenderTransformOrigin="0.5,0.5" Canvas.Left="377" Canvas.Top="286">
+    <Machines:External HorizontalAlignment="Center" VerticalAlignment="Top" Height="58" Width="60" RenderTransformOrigin="0.5,0.5" Canvas.Left="1290" Canvas.Top="720"/>
+    <Machines:Radar HorizontalAlignment="Center" VerticalAlignment="Top" Height="45" Width="39" Canvas.Left="752" Canvas.Top="408"/>
+    <Machines:Radar HorizontalAlignment="Center" VerticalAlignment="Top" Height="45" Width="39" Canvas.Left="480" Canvas.Top="408"/>
+    <Machines:CV_Valve_001 HorizontalAlignment="Center" VerticalAlignment="Top" Color="Air" Height="52" Width="51" RenderTransformOrigin="0.5,0.5" Canvas.Left="377" Canvas.Top="334">
       <Machines:CV_Valve_001.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -98,7 +98,7 @@
         </TransformGroup>
       </Machines:CV_Valve_001.RenderTransform>
     </Machines:CV_Valve_001>
-    <Machines:NT_ConveyorBelt Canvas.Left="829" Canvas.Top="644" Width="216" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
+    <Machines:NT_ConveyorBelt Canvas.Left="829" Canvas.Top="682" Width="216" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
       <Machines:NT_ConveyorBelt.RenderTransform>
         <TransformGroup>
           <ScaleTransform ScaleX="1.5" ScaleY="1.5"/>
@@ -111,32 +111,45 @@
     <Labels:JumpLabel HorizontalAlignment="Center" 
             VerticalAlignment="Top" 
             JumpFromLabel="570-01-MA1" 
-            JumpToLabel="544-01-MA1" Canvas.Left="178" Canvas.Top="102"/>
+            JumpToLabel="544-01-MA1" Canvas.Left="194" Canvas.Top="94"/>
     <Labels:JumpLabel HorizontalAlignment="Center" 
             VerticalAlignment="Top" 
             JumpFromLabel="570-01-MA1" 
-            JumpToLabel="564-01-MA1" Canvas.Left="276" Canvas.Top="156"/>
+            JumpToLabel="564-01-MA1" Canvas.Left="292" Canvas.Top="148"/>
     <Labels:DeviceLabel HorizontalAlignment="Center" 
             VerticalAlignment="Top" 
-            ComponentName="570-21-CV1" Canvas.Left="276" Canvas.Top="285"/>
-    <Labels:DeviceLabel HorizontalAlignment="Left" 
-            VerticalAlignment="Center" 
-            ComponentName="580-71-ECS1" Canvas.Left="1209" Canvas.Top="578" RenderTransformOrigin="-0.615,-1.061"/>
+            ComponentName="570-21-CV1" Canvas.Left="276" Canvas.Top="333"/>
     <Labels:DeviceLabel HorizontalAlignment="Center" 
             VerticalAlignment="Top" 
-            ComponentName="570-01-MA1" Canvas.Left="447" Canvas.Top="553"/>
+            ComponentName="580-71-ECS1" Canvas.Left="1209" Canvas.Top="616" RenderTransformOrigin="-0.615,-1.061"/>
     <Labels:DeviceLabel HorizontalAlignment="Center" 
             VerticalAlignment="Top" 
-            ComponentName="570-41-LT1" Canvas.Left="456" Canvas.Top="410"/>
+            ComponentName="570-01-MA1" Canvas.Left="447" Canvas.Top="601"/>
     <Labels:DeviceLabel HorizontalAlignment="Center" 
             VerticalAlignment="Top" 
-            ComponentName="570-41-LT2" Canvas.Left="726" Canvas.Top="410" />
+            ComponentName="570-41-LT1" Canvas.Left="447" Canvas.Top="458"/>
+    <Labels:DeviceLabel HorizontalAlignment="Center" 
+            VerticalAlignment="Top" 
+            ComponentName="570-41-LT2" Canvas.Left="726" Canvas.Top="458" />
     <Labels:DeviceLabel 
-            ComponentName="580-01-MA1" Canvas.Left="1003" Canvas.Top="578" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+            ComponentName="580-01-MA1" Canvas.Left="1003" Canvas.Top="616" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:DeviceLabel 
-      ComponentName="570-BUFFER" Canvas.Left="604" Canvas.Top="554" HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="-0.189,0.7"/>
-    <Labels:Pipe Width="74" StatusComponent="570-71-ECS1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="556" Canvas.Top="232" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+      ComponentName="570-BUFFER" Canvas.Left="604" Canvas.Top="602" HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="-0.189,0.7"/>
+    <Labels:Pipe Width="74" StatusComponent="570-71-ECS1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="460" Canvas.Top="267" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Labels:DeviceLabel 
-      ComponentName="570-71-ECS1" Canvas.Left="618" Canvas.Top="212" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+      ComponentName="570-71-ECS1" Canvas.Left="405" Canvas.Top="246" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Labels:DeviceLabel 
+      ComponentName="570-41-LT3" Canvas.Left="546" Canvas.Top="458" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Labels:Pipe Width="77" StatusComponent="570-21-CV1" Color="Air" Height="6" RenderTransformOrigin="0.5,0.5" Canvas.Left="564" Canvas.Top="394" HorizontalAlignment="Center" VerticalAlignment="Top">
+      <Labels:Pipe.RenderTransform>
+        <TransformGroup>
+          <ScaleTransform/>
+          <SkewTransform/>
+          <RotateTransform Angle="90"/>
+          <TranslateTransform/>
+        </TransformGroup>
+      </Labels:Pipe.RenderTransform>
+    </Labels:Pipe>
+    <Machines:Radar Height="45" Width="38" Canvas.Left="572" Canvas.Top="408" HorizontalAlignment="Center" VerticalAlignment="Top"/>
   </Canvas>
 </UserControl>
