--- a/Prevu.Synoptics.V2911_Flex/Details/D883_2.xaml
+++ b/Prevu.Synoptics.V2911_Flex/Details/D883_2.xaml
@@ -7,13 +7,13 @@
 						 xmlns:Machines="clr-namespace:Prevu.Drawings.Machines;assembly=Prevu.Drawings" 
              xmlns:Labels="clr-namespace:Prevu.UIComponents.Labels;assembly=Prevu.UIComponents" 
              mc:Ignorable="d" 
-             d:Background="{DynamicResource MaterialDesignPaper}">
-    <Canvas Height="344" Width="368">
-        <Machines:BBF_BigBagFilling Height="320" VerticalAlignment="Center" HorizontalAlignment="Center" Width="343" Canvas.Left="10" Canvas.Top="10" />
-        <Labels:SignalLabel HorizontalAlignment="Left" VerticalAlignment="Top" ComponentName="883-62-BAG" SignalName="LSH" Canvas.Left="146" Canvas.Top="72"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
+             d:Background="{DynamicResource MaterialDesignPaper}" d:DesignWidth="406.579">
+  <Canvas Height="344" Width="368">
+    <Machines:BBF_BigBagFilling Height="320" VerticalAlignment="Center" HorizontalAlignment="Center" Width="343" Canvas.Left="10" Canvas.Top="10" />
+    <Labels:SignalLabel HorizontalAlignment="Left" VerticalAlignment="Top" ComponentName="883-62-BAG" SignalName="LSH" Canvas.Left="136" Canvas.Top="73"/>
+    <Labels:DeviceLabel HorizontalAlignment="Left" 
 		VerticalAlignment="Top" 
 		ComponentName="883-62-BAG" Canvas.Left="136" Canvas.Top="154"/>
-        <Labels:SignalLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="883-62-BAG" SignalName="SEL" Canvas.Left="148" Canvas.Top="214"/>
-    </Canvas>
+    <Labels:SignalLabel HorizontalAlignment="Left" VerticalAlignment="Top" ComponentName="883-62-BAG" SignalName="SEL" Canvas.Left="136" Canvas.Top="234"/>
+  </Canvas>
 </UserControl>
