--- a/Prevu.Synoptics.V2911_Flex/Pages/P288.xaml
+++ b/Prevu.Synoptics.V2911_Flex/Pages/P288.xaml
@@ -20,8 +20,8 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe Width="70" StatusComponent="232-01-MA1" Color="Water" Canvas.Left="167" Canvas.Top="88" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-    <Labels:Pipe RenderTransformOrigin="0.5,0.5" Width="64" StatusComponent="232-01-MA1" Color="Water" Canvas.Left="203" Canvas.Top="119" HorizontalAlignment="Left" VerticalAlignment="Center">
+    <Labels:Pipe Width="70" StatusComponent="232-01-MA1" Color="Water" Canvas.Left="181" Canvas.Top="94" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Labels:Pipe RenderTransformOrigin="0.5,0.5" Width="64" StatusComponent="232-01-MA1" Color="Water" Canvas.Left="217" Canvas.Top="125" HorizontalAlignment="Center" VerticalAlignment="Top">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -31,7 +31,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe Width="196" StatusComponent="236-01-MA1" Color="Water" Canvas.Left="275" Canvas.Top="168" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Labels:Pipe Width="196" StatusComponent="236-01-MA1" Color="Water" Canvas.Left="275" Canvas.Top="174" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="172" StatusComponent="288-21-CV1" Canvas.Left="1043" Canvas.Top="289"/>
     <Labels:Pipe Color="Water" Width="135" StatusComponent="288-21-CV1" RenderTransformOrigin="0.5,0.5" Canvas.Left="977" Canvas.Top="354" HorizontalAlignment="Left" VerticalAlignment="Center">
       <Labels:Pipe.RenderTransform>
@@ -76,8 +76,8 @@
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
     <Labels:Pipe Color="Water" Width="288" StatusComponent="292-01-MA1" Canvas.Left="1102" Canvas.Top="524" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-    <Labels:Pipe Color="Water" Width="304" StatusComponent="291-01-MA1" Canvas.Left="1095" Canvas.Top="449" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-    <Labels:Pipe RenderTransformOrigin="0.5,0.5" Width="182" StatusComponent="236-01-MA1" Color="Water" Canvas.Left="378" Canvas.Top="257" HorizontalAlignment="Left" VerticalAlignment="Center">
+    <Labels:Pipe Color="Water" Width="304" StatusComponent="291-01-MA1" Canvas.Left="1091" Canvas.Top="449" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Labels:Pipe RenderTransformOrigin="0.5,0.5" Width="182" StatusComponent="236-01-MA1" Color="Water" Canvas.Left="378" Canvas.Top="263" HorizontalAlignment="Center" VerticalAlignment="Top">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -226,8 +226,8 @@
         </TransformGroup>
       </Machines:CV_Valve.RenderTransform>
     </Machines:CV_Valve>
-    <Machines:VRC_WaterCollectingTank Height="78" Width="93" Canvas.Left="187" Canvas.Top="133" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-    <Machines:WaterPump Height="45" Width="45" RenderTransformOrigin="0.5,0.5" Color="Water" BorderBrush="Black" Canvas.Left="211" Canvas.Top="148" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Machines:VRC_WaterCollectingTank Height="78" Width="93" Canvas.Left="201" Canvas.Top="139" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Machines:WaterPump Height="45" Width="45" RenderTransformOrigin="0.5,0.5" Color="Water" BorderBrush="Black" Canvas.Left="225" Canvas.Top="154" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Machines:V01_RTF_Microfilter Canvas.Left="448" Canvas.Top="489" Height="130" Width="144" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Machines:V01_SCW_Screw_wHopper Canvas.Left="349" Canvas.Top="251" HorizontalAlignment="Left" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5" Width="182" Height="174">
       <Machines:V01_SCW_Screw_wHopper.RenderTransform>
@@ -244,19 +244,19 @@
                       VerticalAlignment="Center" 
                       JumpFromLabel="283-01-MA1" 
                       JumpToLabel="457-01-MA1" Canvas.Left="541" Canvas.Top="55" Direction="Left"/>
-    <Labels:JumpLabel HorizontalAlignment="Center" 
-            VerticalAlignment="Top" 
+    <Labels:JumpLabel HorizontalAlignment="Left" 
+            VerticalAlignment="Center" 
             JumpFromLabel="293-01-MA1" 
-            JumpToLabel="110-41-LT1" Canvas.Left="1384" Canvas.Top="642"/>
+            JumpToLabel="110-41-LT1" Canvas.Left="1380" Canvas.Top="642"/>
     <Labels:JumpLabel 
             JumpFromLabel="292-01-MA1" 
-            JumpToLabel="232-01-MA1" Canvas.Left="1384" Canvas.Top="492" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+            JumpToLabel="232-01-MA1" Canvas.Left="1380" Canvas.Top="492" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Labels:JumpLabel 
             JumpFromLabel="291-01-MA1" 
-            JumpToLabel="230-01-MA1" Canvas.Left="1384" Canvas.Top="416" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+            JumpToLabel="230-01-MA1" Canvas.Left="1380" Canvas.Top="416" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Labels:JumpLabel 
             JumpFromLabel="236-01-MA1" 
-            JumpToLabel="232-01-MA1" Canvas.Left="89" Canvas.Top="55" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+            JumpToLabel="232-01-MA1" Canvas.Left="103" Canvas.Top="61" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:JumpLabel 
       JumpFromLabel="283-01-MA1" 
       JumpToLabel="477-01-MA1" Canvas.Left="561" Canvas.Top="132" Direction="Left" HorizontalAlignment="Left" VerticalAlignment="Center"/>
@@ -280,7 +280,7 @@
     <Labels:DeviceLabel 
             ComponentName="288-22-CV1" Canvas.Left="869" Canvas.Top="327" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Labels:DeviceLabel 
-            ComponentName="236-01-MA1" Canvas.Left="80" Canvas.Top="146" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+            ComponentName="236-01-MA1" Canvas.Left="94" Canvas.Top="152" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:DeviceLabel HorizontalAlignment="Left" 
             VerticalAlignment="Center" 
             ComponentName="286-41-LT1" Canvas.Left="473" Canvas.Top="570"/>
