--- a/Prevu.Synoptics.V2911_Flex/Pages/P430.xaml
+++ b/Prevu.Synoptics.V2911_Flex/Pages/P430.xaml
@@ -10,7 +10,7 @@
              x:Class="Prevu.Synoptics.P430" mc:Ignorable="d" 
              Height="850" Width="1550" d:Background="{DynamicResource MaterialDesignPaper}">
   <Canvas >
-    <Labels:Pipe Width="80" Canvas.Top="303" StatusComponent="455-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="1105" Color="Water" HorizontalAlignment="Left" VerticalAlignment="Center">
+    <Labels:Pipe Width="100" Canvas.Top="301" StatusComponent="455-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="1095" Color="Water" HorizontalAlignment="Center" VerticalAlignment="Top">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -20,8 +20,8 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe Width="219" Canvas.Top="341" StatusComponent="455-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="928" Color="Water" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-    <Labels:Pipe Width="206" Canvas.Top="442" StatusComponent="455-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="827" Color="Water" HorizontalAlignment="Left" VerticalAlignment="Center">
+    <Labels:Pipe Width="219" Canvas.Top="349" StatusComponent="455-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="928" Color="Water" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Labels:Pipe Width="206" Canvas.Top="450" StatusComponent="455-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="827" Color="Water" HorizontalAlignment="Center" VerticalAlignment="Top">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -111,9 +111,9 @@
     </Labels:Pipe>
     <Labels:Pipe Color="Water" Width="44" StatusComponent="450-21-CV1" Canvas.Left="498" Canvas.Top="477" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Labels:Pipe Width="220" Color="Water" StatusComponent="457-01-MA1" Canvas.Left="691" Canvas.Top="747" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-    <Labels:Pipe Width="309" Color="Water" StatusComponent="453-01-MA1" Canvas.Left="194" Canvas.Top="747" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Labels:Pipe Width="309" Color="Water" StatusComponent="453-01-MA1" Canvas.Left="193" Canvas.Top="747" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Labels:Pipe Color="Vapor" Width="53" StatusComponent="450-22-CV1" Canvas.Left="443" Canvas.Top="612" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-    <Labels:Pipe Width="598" Canvas.Top="449" StatusComponent="453-01-MA1" Canvas.Left="-103" Color="Water" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center">
+    <Labels:Pipe Width="598" Canvas.Top="449" StatusComponent="453-01-MA1" Canvas.Left="-104" Color="Water" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -146,7 +146,7 @@
     </Labels:Pipe>
     <Labels:Pipe Width="131" VisibilityComponent="" Canvas.Top="131" StatusComponent="431-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="996" PipeHeight="Medium" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Labels:Pipe Width="78" StatusComponent="446-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="1334" Canvas.Top="578" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-    <Labels:Pipe Width="148" StatusComponent="446-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="1336" Canvas.Top="649" HorizontalAlignment="Left" VerticalAlignment="Center">
+    <Labels:Pipe Width="148" StatusComponent="446-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="1336" Canvas.Top="650" HorizontalAlignment="Center" VerticalAlignment="Top">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -218,7 +218,7 @@
     <Machines:SCW_ScrewConveyor_straight RenderTransformOrigin="0.5,0.5" Width="104" Height="18" Canvas.Left="1045" Canvas.Top="593" HorizontalAlignment="Left" VerticalAlignment="Center" />
     <Blowers:VT_CMM_BlowerAirCompressor Canvas.Left="1116" Canvas.Top="479" Height="27" Width="26" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Machines:SCW_ScrewConveyor_straight Canvas.Left="1271" Canvas.Top="569" HorizontalAlignment="Left" VerticalAlignment="Center" Width="90"/>
-    <Machines:V01_BBF_SingleBag Canvas.Left="1365" Canvas.Top="652" Height="95" Width="91" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Machines:V01_BBF_SingleBag Canvas.Left="1365" Canvas.Top="648" Height="95" Width="91" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Machines:WaterPump Height="45" Width="45" RenderTransformOrigin="0.5,0.5" Color="Water" Canvas.Left="759" Canvas.Top="728" HorizontalAlignment="Left" VerticalAlignment="Center">
       <Machines:WaterPump.RenderTransform>
         <TransformGroup>
@@ -260,7 +260,7 @@
                       JumpFromLabel="420-01-MA1" 
                       JumpToLabel="380-01-MA1" Canvas.Left="72" Canvas.Top="100"/>
     <Labels:DetailsLabel ComponentName="430-VIEW" DetailsPageName="D430" HideComponentName="True" Canvas.Left="639" Canvas.Top="50" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-    <Labels:DetailsLabel ComponentName="446-BAG" DetailsPageName="D446" HideComponentName="True" Canvas.Left="1446" Canvas.Top="752" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Labels:DetailsLabel ComponentName="446-BAG" DetailsPageName="D446" HideComponentName="True" Canvas.Left="1446" Canvas.Top="748" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:DeviceLabel 
             ComponentName="431-01-MA1" Canvas.Left="745" Canvas.Top="222" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Labels:DeviceLabel 
@@ -294,7 +294,7 @@
     <Labels:DeviceLabel 
       ComponentName="446-01-MA1" Canvas.Left="1273" Canvas.Top="597" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:DeviceLabel 
-      ComponentName="446-62-BAG" Canvas.Left="1352" Canvas.Top="752" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+      ComponentName="446-62-BAG" Canvas.Left="1352" Canvas.Top="748" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:DeviceLabel 
       ComponentName="450-42-TT1" RenderTransformOrigin="0.5,0.5" Canvas.Left="589" Canvas.Top="709" HorizontalAlignment="Left" VerticalAlignment="Center"/>
   </Canvas>
